E-Maj - Release notes
---------------------
0.11.1
------
Enhancements:
  - largely improve the processing of foreing keys during rollback operations:
    foreign keys are only dropped and recreated when this is really needed 
    and the rollback functions take benefit of foreign keys declared as 
    DEFERRABLE.
  - tspemaj tablespace is now optional. If it exists at emaj installation 
    time, technical tables are stored on it. If it exists at  
    emaj_create_group() time, log tables and index are stored on it. If 
    tspemaj doesn't exist, default_tablespace is used.
  - improve the error message returned by emaj_rename_mark_group() if the 
    supplied new mark name is NULL.
  - minor internal improvements in rollback functions, and in 
    emaj_delete_mark_group() and emaj_delete_before_mark_group() functions.

Bug fixes:
  - fix an incorrect state for marks generated at stop_group(s) time. Being 
    previously left as ACTIVE after the emaj_stop_group() or 
    emaj_stop_groups() functions calls, a rollback to this mark after a 
    restart of the group led to sequence values corruption.
  - indexes of technical emaj tables are now also located on tspemaj 
    tablespace (if exists)
  - fix a SQL injection hole in 2 functions by testing more carefuly supplied 
    parameters.

0.11.0
------
Enhancements:
  - add an optional "resetLog" boolean parameter to the emaj_start_group() 
    and emaj_start_groups() functions, indicating if the old log records must 
    be physicaly deleted or not. By default, or when this third parameter is 
    set to true, old log records of a group are deleted (i.e. the group is 
    reset) at start group time. If the group is not reset at start time, all 
    old related marks and log tables rows cannot be used for any rollback 
    operation anymore. Nevertheless, log rows remain visible, old marks can 
    be deleted, renamed or commented, and log statistics can be requested.